--- a/Models/Acoustic/2020.04.09_Flow-TTS.md
+++ b/Models/Acoustic/2020.04.09_Flow-TTS.md
@@ -24,20 +24,44 @@
 
 ## Abstract: 摘要
 
-In this work, we propose Flow-TTS, a non-autoregressive end-to-end neural TTS model based on generative flow.
-Unlike other non-autoregressive models, Flow-TTS can achieve high-quality speech generation by using a single feed-forward network.
-To our knowledge, Flow-TTS is the first TTS model utilizing flow in spectrogram generation network and the first non-autoregressive model which jointly learns the alignment and spectrogram generation through a single network.
-Experiments on LJSpeech show that the speech quality of Flow-TTS heavily approaches that of human and is even better than that of autoregressive model Tacotron 2 (outperforms Tacotron 2 with a gap of 0.09 in MOS).
-Meanwhile, the inference speed of Flow-TTS is about 23 times speed-up over Tacotron 2, which is comparable to FastSpeech.
+<table><tr><td width="50%">
 
-## 1·Introduction: 引言
+In this work, we propose ***Flow-TTS***, a non-autoregressive end-to-end neural TTS model based on generative flow.
+Unlike other non-autoregressive models, ***Flow-TTS*** can achieve high-quality speech generation by using a single feed-forward network.
+To our knowledge, ***Flow-TTS*** is the first TTS model utilizing flow in spectrogram generation network and the first non-autoregressive model which jointly learns the alignment and spectrogram generation through a single network.
+Experiments on **LJSpeech** show that the speech quality of ***Flow-TTS*** heavily approaches that of human and is even better than that of autoregressive model **Tacotron2** (outperforms **Tacotron2** with a gap of 0.09 in MOS).
+Meanwhile, the inference speed of ***Flow-TTS*** is about 23 times speed-up over **Tacotron2**, which is comparable to **FastSpeech**.
+
+</td><td>
+
+</td></tr></table>
 
 ## 2·Related Works: 相关工作
 
+<table><tr><td width="50%">
+
+</td></tr></table>
+
 ## 3·Methodology: 方法
+
+<table><tr><td width="50%">
+
+</td></tr></table>
 
 ## 4·Experiments: 实验
 
+<table><tr><td width="50%">
+
+</td></tr></table>
+
 ## 5·Results: 结果
 
+<table><tr><td width="50%">
+
+</td></tr></table>
+
 ## 6·Conclusions: 结论
+
+<table><tr><td width="50%">
+
+</td></tr></table>
