--- a/Models/Acoustic/2020.05.15_JDI-T.md
+++ b/Models/Acoustic/2020.05.15_JDI-T.md
@@ -24,31 +24,50 @@
 
 ## Abstract: 摘要
 
-<table>
-<tr>
-<td width="50%">
+<table><tr><td width="50%">
 
 We propose ***Jointly trained Duration Informed Transformer (JDI-T)***, a feed-forward Transformer with a duration predictor jointly trained without explicit alignments in order to generate an acoustic feature sequence from an input text.
-In this work, inspired by the recent success of the duration informed networks such as FastSpeech and DurIAN, we further simplify its sequential, two-stage training pipeline to a single-stage training.
+In this work, inspired by the recent success of the duration informed networks such as **FastSpeech** and **DurIAN**, we further simplify its sequential, two-stage training pipeline to a single-stage training.
 Specifically, we extract the phoneme duration from the autoregressive Transformer on the fly during the joint training instead of pretraining the autoregressive model and using it as a phoneme duration extractor.
 To our best knowledge, it is the first implementation to jointly train the feed-forward Transformer without relying on a pre-trained phoneme duration extractor in a single training pipeline.
-We evaluate the effectiveness of the proposed model on the publicly available Korean Single speaker Speech (KSS) dataset compared to the baseline text-to-speech (TTS) models trained by ESPnet-TTS.
+We evaluate the effectiveness of the proposed model on the publicly available **Korean Single speaker Speech (KSS) dataset** compared to the baseline text-to-speech (TTS) models trained by **ESPnet-TTS**.
 
-</td>
-<td>
+</td><td>
 
-</td>
-</tr>
-</table>
+</td></tr></table>
 
 ## 1·Introduction: 引言
 
+<table><tr><td width="50%">
+
+</td></tr></table>
+
 ## 2·Related Works: 相关工作
+
+<table><tr><td width="50%">
+
+</td></tr></table>
 
 ## 3·Methodology: 方法
 
+<table><tr><td width="50%">
+
+</td></tr></table>
+
 ## 4·Experiments: 实验
+
+<table><tr><td width="50%">
+
+</td></tr></table>
 
 ## 5·Results: 结果
 
+<table><tr><td width="50%">
+
+</td></tr></table>
+
 ## 6·Conclusions: 结论
+
+<table><tr><td width="50%">
+
+</td></tr></table>
